--- a/apollo/frontend/templates/frontend/form_edit_with_set.html
+++ b/apollo/frontend/templates/frontend/form_edit_with_set.html
@@ -1,6 +1,6 @@
 {% extends 'frontend/_layout.html' %}
 {%- from 'frontend/macros/form_edit_form.html' import render_edit_form_with_set -%}
-{% block subtitle %}{{ form_set.name }}{% endblock subtitle %}
+{% block subtitle %}<a href="{{ url_for('forms.list_forms_with_set', form_set_id=form_set.id) }}">{{ form_set.name }}</a>{% endblock subtitle %}
 {% block content %}
 <div class="row">
 <div class="col-md-8 col-md-offset-2">
