--- a/apollo/frontend/templates/frontend/form_list_with_set.html
+++ b/apollo/frontend/templates/frontend/form_list_with_set.html
@@ -4,7 +4,7 @@
 <a class="btn btn-sm btn-default pull-right" data-toggle="modal" data-target="#formImportModal" href="#" style="margin-right: 1em"><span class="glyphicon glyphicon-upload"></span> {{ _('Import') }}</a>
 <a class="btn btn-sm btn-default pull-right" href="{{ url_for('forms.new_form_with_set', form_set_id=form_set.id) }}" style="margin-right: 1em"><span class="glyphicon glyphicon-plus"></span> {{ _('Add Form') }}</a>
 {% endblock %}
-{% block subtitle %}{{ form_set.name }}{% endblock subtitle %}
+{% block subtitle %}<a href="{{ url_for('formset.index_view') }}">{{ form_set.name }}</a>{% endblock subtitle %}
 {% block content %}
 {% with messages = get_flashed_messages(category_filter=['checklist_init_success']) %}
 {% if messages %}
