--- a/apollo/frontend/templates/frontend/participant_list_with_set.html
+++ b/apollo/frontend/templates/frontend/participant_list_with_set.html
@@ -29,7 +29,7 @@ a:hover.arrow-style{text-decoration:none; color:#333;}
   }
 </style>
 {% endblock %}
-{% block subtitle %}{{ participant_set.name }}{% endblock subtitle %}
+{% block subtitle %}<a href="{{ url_for('participantset.index_view') }}">{{ participant_set.name }}</a>{% endblock subtitle %}
 {% block toolbar %}
   {%- if perms.export_participants.can() -%}
   <a class="btn btn-sm btn-default pull-right" href="{{ url_for('participants.participant_list_with_set', export='true', participant_set_id=participant_set_id) }}"><i class="glyphicon glyphicon-export"></i> {{ _('Export') }}</a>
