--- a/apollo/frontend/templates/frontend/_layout.html
+++ b/apollo/frontend/templates/frontend/_layout.html
@@ -87,9 +87,10 @@
               <a class="dropdown-toggle" data-toggle="dropdown" href="#"><img src="{{ current_user.email|gravatar }}" class="img-rounded" style="margin-right: 0.25em; border-radius: 12px"><b class="caret"></b></a>
               <ul class="dropdown-menu left-submenu">
                 <li class="eml"><a href="#">{{ current_user.email}}</a></li>
-              {%- if current_menu.submenu('user.events').visible %}
                 <li class="divider"></li>
+              {%- if current_menu.submenu('user.events').visible %}
                 <li><a href="{{ current_menu.submenu('user.events').url }}"><i class="glyphicon glyphicon-calendar"></i> {{ current_menu.submenu('user.events').text }}</a></li>
+                <li class="divider"></li>
               {%- endif %}
               {#
               {%- if current_menu.submenu('user.concurrent_events').visible -%}
@@ -103,23 +104,13 @@
               {%- endif %}
               #}
               {%- if current_user.is_admin() %}
-                <li class="divider"></li>
                 <li><a href="{{ url_for('deployment.index_view') }}"><i class="glyphicon glyphicon-user"></i> {{ _('Admin') }}</a></li>
-              {%- endif %}
-              {#
-              {%- if current_menu.submenu('user.locations_builder').visible or current_menu.submenu('user.locations_list').visible or current_menu.submenu('user.forms').visible %}
-              {%- endif %}
-              {%- if current_menu.submenu('user.locations_builder').visible %}
-                <li><a href="{{ current_menu.submenu('user.locations_builder').url }}"><i class="glyphicon glyphicon-map-marker"></i> {{ current_menu.submenu('user.locations_builder').text }}</a></li>
-              {%- endif %}#}
                 <li class="divider"></li>
+              {%- endif %}
               {%- if current_menu.submenu('user.forms').visible -%}
                 <li><a href="{{ current_menu.submenu('user.forms').url }}"><i class="glyphicon glyphicon-list-alt"></i> {{ current_menu.submenu('user.forms').text }}</a></li>
-              {%- endif %}{#
-              {%- if current_menu.submenu('user.locations_builder').visible or current_menu.submenu('user.formbuilder').visible %}
-              {%- endif -%}
-              #}
                 <li class="divider"></li>
+              {%- endif %}
                 <li><a href="{{ url_for_security('logout') }}"><i class="glyphicon glyphicon-log-out"></i> {{ _('Logout') }}</a></li>
               </ul>
             </li>
@@ -137,7 +128,7 @@
         <div class="container">
           <footer>
           {%- block footer -%}
-            <p style="padding-top:18px;">Apollo &mdash; v2.7.9</p>
+            <p style="padding-top:18px;">Apollo &mdash; v3.0-alpha</p>
           {%- endblock -%}
           </footer>
         </div>
