--- a/apollo/frontend/templates/frontend/login_user.html
+++ b/apollo/frontend/templates/frontend/login_user.html
@@ -37,7 +37,7 @@
                     <span class="input-group-addon input-sm">
                       <i class="glyphicon glyphicon-user"></i>
                     </span>
-                    <input type="text" name="{{ login_user_form.email.name }}" id="{{ login_user_form.email.id }}" class="form-control" placeholder="{{ _('Email') }}">
+                    <input type="text" name="{{ login_user_form.email.name }}" id="{{ login_user_form.email.id }}" class="form-control" placeholder="{{ _('Username/Email') }}">
                   </div>
                 </div>
                 <div class="form-group">
