--- a/apollo/frontend/templates/frontend/macros/participant_header_form.html
+++ b/apollo/frontend/templates/frontend/macros/participant_header_form.html
@@ -2,7 +2,7 @@
 <div class="col-sm-10">
 	{{ form.hidden_tag() }}
 	<input type="hidden" name="action" id="form-action" value="{{ request.full_path }}">
-	{%- if form.errors.['__validate__'] -%}
+	{%- if form.errors['__validate__'] -%}
 	<div class="alert alert-danger">
 		<ul>
 		{%- for errmsg in form.errors['__validate__'] -%}
@@ -10,7 +10,7 @@
 		{%- endfor -%}
 		</ul>
 	</div>
-	{%- endif %-}
+	{%- endif -%}
 	{%- for field in form -%}
 	{%- if field.type != 'CSRFTokenField' -%}
 	<div class="form-group {% if field.errors %}has-error{% endif %}">
