feat: updated version number and codename

--- a/apollo/frontend/templates/frontend/_layout.html
+++ b/apollo/frontend/templates/frontend/_layout.html
@@ -128,7 +128,7 @@
         <div class="container">
           <footer>
           {%- block footer -%}
-            <p style="padding-top:18px;">Apollo &mdash; v3.0-alpha</p>
+            <p style="padding-top:18px;">Apollo &mdash; v3.1 (Bamako)</p>
           {%- endblock -%}
           </footer>
         </div>
