--- a/apollo/process_analysis/templates/process_analysis/critical_incidents_locations.html
+++ b/apollo/process_analysis/templates/process_analysis/critical_incidents_locations.html
@@ -44,7 +44,7 @@
               {% for lt in location_types %}
               <td>{{ incident|get_location_for_type(lt) }}</td>
               {% endfor %}
-              <td>{{ incident.location.name }} &middot; <em class"muted">{{ incident.location.location_type }}</em></td>
+              <td>{{ incident.location.name }} &middot; <em class="muted">{{ incident.location.location_type }}</em></td>
               <td style="text-align:center">
               {% if incident.incident_status == 'confirmed' %}
               <img src="{{ url_for('static', filename='img/tick.png') }}" title="{{ _('Confirmed') }}" alt="{{ _('Confirmed') }}" />
