--- a/apollo/frontend/templates/frontend/login_user.html
+++ b/apollo/frontend/templates/frontend/login_user.html
@@ -52,6 +52,7 @@
                 <button type="submit" class="btn btn-sm btn-default">{{ _('Sign In') }}</button>
               </form>
             </div>
+            <div class="panel-footer"><a href="{{ url_for_security('forgot_password') }}">{{ _('Forgot password?') }}</a></div>
           </div>
         </div>
       </div>
