--- a/apollo/frontend/templates/frontend/_layout.html
+++ b/apollo/frontend/templates/frontend/_layout.html
@@ -111,7 +111,7 @@
                 <li><a href="{{ current_menu.submenu('user.forms').url }}"><i class="glyphicon glyphicon-list-alt"></i> {{ current_menu.submenu('user.forms').text }}</a></li>
                 <li class="divider"></li>
               {%- endif %}
-                <li><a href="{{ url_for('users.user_profile') }}"><i class="glyphicon glyphicon-cog"></i> {{ _('Account settings') }}</a></li>
+                <li><a href="{{ url_for('users.user_profile') }}"><i class="glyphicon glyphicon-cog"></i> {{ _('Account Settings') }}</a></li>
                 <li class="divider"></li>
                 <li><a href="{{ url_for_security('logout') }}"><i class="glyphicon glyphicon-log-out"></i> {{ _('Logout') }}</a></li>
               </ul>
