--- a/apollo/frontend/templates/frontend/participant_edit_modal.html
+++ b/apollo/frontend/templates/frontend/participant_edit_modal.html
@@ -32,14 +32,44 @@
 </div>
 {%- endif -%}
 {%- endfor -%}
+<div class="row">
+<div class="col-sm-10 col-sm-offset-1">
+<div class="panel panel-default">
+<div class="panel-heading">
+<h4 class="panel-title"><a role="button" data-toggle="collapse" href="#allPhones" aria-expanded="true" aria-controls="allPhones">{{ _('All phones') }}</a></h4>
+</div>
+<div id="allPhones" class="panel-collapse collapse">
+<table class="table table-bordered table-hover table-striped" style="margin-bottom: 0px;">
+<thead>
+<tr>
+<th>{{ _('Number') }}</th>
+<th>{{ _('Last seen') }}</th>
+<th>{{ _('Verified') }}</th>
+</tr>
+</thead>
+<tbody>
+{% for p_phone in participant.participant_phones %}
+<tr>
+<td>{{ p_phone.phone.number }}</td>
+<td>{{ p_phone.last_seen|datetimeformat }}</td>
+<td>{% if p_phone.verified %}<i class="glyphicon glyphicon-ok"></i>{% else %}<i class="glyphicon glyphicon-remove"></i>{% endif %}</td>
+</tr>
+{% endfor %}
+</tbody>
+</table>
+</ul>
+</div>
+</div>
+</div>
+</div>
 </div>
 <div class="modal-footer">
   <div class="row">
     <div class="col-sm-1"></div>
-      <div class="col-sm-10" style="padding-right:1.8em;">
-        <button type="submit" style="width:122px;"class="btn btn-primary">{{ _('Save') }}</button>
-        <button type="button" style="width:122px;"class="btn btn-default" data-dismiss="modal">{{ _('Close') }}</button>
-      </div>
+    <div class="col-sm-10" style="padding-right:1.8em;">
+    <button type="submit" style="width:122px;"class="btn btn-primary">{{ _('Save') }}</button>
+    <button type="button" style="width:122px;"class="btn btn-default" data-dismiss="modal">{{ _('Close') }}</button>
+    </div>
   </div>
 </div>
 </form>
