feat: change option description

--- a/apollo/frontend/templates/frontend/location_builder.html
+++ b/apollo/frontend/templates/frontend/location_builder.html
@@ -46,12 +46,12 @@
           <div class="col-sm-10 col-sm-offset-2">
             <div class="checkbox">
               <label for="addDivisionAdministrative">
-                <input type="checkbox" name="is_administrative" id="addDivisionAdministrative" value="true" /> {{ _('Administrative Division') }}
+                <input type="checkbox" name="is_administrative" id="addDivisionAdministrative" value="true" /> {{ _('Display on dashboard and in tables') }}
               </label>
             </div>
             <div class="checkbox">
               <label for="addDivisionPolitical">
-                <input type="checkbox" name="is_political" id="addDivisionPolitical" value="true" /> {{ _('Political Division') }}
+                <input type="checkbox" name="is_political" id="addDivisionPolitical" value="true" /> {{ _('Use in data summary') }}
               </label>
             </div>
           </div>
@@ -114,12 +114,12 @@
           <div class="col-sm-10 col-sm-offset-2">
             <div class="checkbox">
               <label for="updateDivisionAdministrative">
-                <input type="checkbox" name="is_administrative" id="updateDivisionAdministrative" value="true" /> {{ _('Administrative Division') }}
+                <input type="checkbox" name="is_administrative" id="updateDivisionAdministrative" value="true" /> {{ _('Display on dashboard and in tables') }}
               </label>
             </div>
             <div class="checkbox">
               <label for="updateDivisionPolitical">
-                <input type="checkbox" name="is_political" id="updateDivisionPolitical" value="true" /> {{ _('Political Division') }}
+                <input type="checkbox" name="is_political" id="updateDivisionPolitical" value="true" /> {{ _('Use in data summary') }}
               </label>
             </div>
           </div>
