fix: change case

--- a/apollo/frontend/templates/frontend/participant_edit.html
+++ b/apollo/frontend/templates/frontend/participant_edit.html
@@ -10,7 +10,7 @@
 <div class="col-sm-8 col-sm-offset-2">
 <div class="panel panel-default">
 <div class="panel-heading">
-<h4 class="panel-title"><a role="button" data-toggle="collapse" href="#allPhones" aria-expanded="true" aria-controls="allPhones">{{ _('All phones') }}</a></h4>
+<h4 class="panel-title"><a role="button" data-toggle="collapse" href="#allPhones" aria-expanded="true" aria-controls="allPhones">{{ _('All Phones') }}</a></h4>
 </div>
 <div id="allPhones" class="panel-collapse collapse">
 <table class="table table-bordered table-hover table-striped" style="margin-bottom: 0px;">
