fix: title case for table column header

--- a/apollo/frontend/templates/frontend/participant_edit.html
+++ b/apollo/frontend/templates/frontend/participant_edit.html
@@ -17,7 +17,7 @@
 <thead>
 <tr>
 <th>{{ _('Number') }}</th>
-<th>{{ _('Last seen') }}</th>
+<th>{{ _('Last Seen') }}</th>
 <th>{{ _('Verified') }}</th>
 </tr>
 </thead>
